compiler/kernc_cli/tests/soundness/reject/projection/impl_associated_type_bare_self_reference_rejected.rn
// class: projection-normalization
// source: impl-associated type targets cannot treat the impl's own associated type placeholder as a concrete type
// stderr: impl-associated type targets must resolve to a concrete type
// stderr: bare associated type names are not available as concrete aliases

trait Value {
    type Out;
};

struct X {};

impl X: Value {
    type Out = Out;
}

fn main() i32 {
    return 0;
}
